--- a/r01hpLODWar/ivy.xml
+++ b/r01hpLODWar/ivy.xml
@@ -83,6 +83,7 @@
 		<!--
 		</dependency>
 		-->
+		<dependency org="xerces" name="xercesImpl" rev="latest.integration" />
 		
 		<!-- ============================================================================================================================== -->
 		<!-- LOD                                                                                                                            -->
